--- a/index.html
+++ b/index.html
@@ -11,10 +11,54 @@
     <header>
         <div class="logo">
             <img class="logoboolean" src="./img-toboolist/Logo.png" alt="logo boolean">
-            <h1>TOBOOLIST</h1>
+            <h1>Toboolist</h1>
         </div>
     </header>
     <!-- MAIN -->
-    <main></main>
+    <main>
+        <div class="corpo">
+            <button id="azzurro" class="bottone">Add Task</button>
+            <button class="bottone2">Add Section</button>
+            <hr>
+            <ul class="ulprincipal">
+                <ul>
+                    <h2> <span class="frecce">&#128899;</span>New Task</h2>
+                    <li><span class="check">&check;</span> Quarterly Newsletter 
+                        <span class="etichetta azzurro">Editorial</span>
+                    </li>
+                    
+                </ul>
+                <ul>
+                    <h2> <span class="frecce">&#128899;</span>Today</h2>
+                    <li><span class="check">&check;</span> Recruiting blog post
+                        <span class="etichetta azzurro">Editorial</span>
+                    </li>
+                    <li><span class="check">&check;</span> Mobile app luaunch
+                        <span class="etichetta viola">Q1 Goals</span>                   
+                    </li>
+                    <li><span class="cross">&cross;</span> Interview John H.
+                        <span class="etichetta verde">Recruiting</span>
+                    </li>
+                    <li><span class="check">&check;</span> Summit update to mobile storefronts
+                        <span class="etichetta arancione">Mobile</span>       
+                    </li>
+                </ul>
+                <ul>
+                    <h2> <span class="frecce">&#128899;</span>Upcoming</h2>
+                    <li><span class="cross">&cross;</span> Schedule meeting with Alex</li>
+                    <li><span class="check">&check;</span> Homepage refresh
+                        <span class="etichetta rosso">Website</span>
+                    </li>
+                    <li><span class="check">&check;</span> Onboard new Sales team members
+                        <span class="etichetta verdechiaro">Sales</span>
+                    </li>
+                    <li><span class="check">&check;</span> Review editorial calendar
+                        <span class="etichetta azzurro">Editorial</span>
+                    </li>
+                </ul>
+            </ul>
+        </div>
+
+    </main>
 </body>
 </html>
