--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     </header>
     <!-- MAIN -->
     <main>
-        <div class="corpo">
+        <div class="corpo up">
             <button id="azzurro" class="bottone">Add Task</button>
             <button class="bottone2">Add Section</button>
-            <hr>
+            
+        </div>
+        <div class="corpo down">
+
             <ul class="ulprincipal">
                 <ul>
                     <h2> <span class="frecce">&#128899;</span>New Task</h2>
